--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pure-dark-syntax",
+  "name": "pure-syntax",
   "theme": "syntax",
   "version": "1.0.0",
   "description": "A vibrant syntax theme for Atom.",
